Fixed image height and header z-index

--- a/resources/stylesheets/styles.css
+++ b/resources/stylesheets/styles.css
@@ -12,6 +12,8 @@ header {
     border-bottom: 1px solid seashell;
     width: 100%;
     position: fixed;
+    z-index: 10;
+    background-color: black;
 }
 
 #logo {
@@ -39,4 +41,7 @@ header ul li {
 #missionbg {
     min-width: 1200px;
     min-height: 700px;
+    position: relative;
+    box-sizing: border-box;
+    top: 70px;
 }
